--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,12 @@
 </head>
 
 <body class="font-poppins text-gray-800">
-  <h2>Hello World</h2>
+  <div class="main flex items-center justify-center">
+    <ul class="">
+      <li><a href="login.html" target="_blank">Login</a></li>
+      <li><a href="dashboard.html" target="_blank">Dashboard</a></li>
+    </ul>
+  </div>
   <!-- Start Navbar -->
 
   <!-- End Navbar -->
