--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Home Page | Easy Admin</title>
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="./css/font-awesome/css/all.min.css" />
@@ -22,11 +23,12 @@
 </head>
 
 <body class="font-poppins text-gray-800">
-  <div class="main flex items-center justify-center">
-    <ul class="">
-      <li><a href="login.html" target="_blank">Login</a></li>
-      <li><a href="dashboard.html" target="_blank">Dashboard</a></li>
-    </ul>
+  <div class="main h-screen flex">
+    <div class="m-auto max-w-md transition text-center">
+      <a href="sign-up.html" class="bg-indigo-500 hover:bg-indigo-400 text-white rounded py-2 px-3">Sign Up</a>
+      <a href="login.html" class="bg-indigo-500 hover:bg-indigo-400 text-white rounded py-2 px-3">Login</a>
+      <a href="dashboard.html" class="bg-indigo-500 hover:bg-indigo-400 text-white rounded py-2 px-3">Dashboard</a> 
+    </div>
   </div>
   <!-- Start Navbar -->
 
