--- a/public/login.html
+++ b/public/login.html
@@ -38,7 +38,15 @@
               <label for="password">Password</label>
               <a href="forgot-password.html" class="text-xs">Forgot your password?</a>
             </span>
-            <input type="password" class="input w-full" id="password" name="password" placeholder="Enter your password" required />
+            <span class="relative">
+              <input type="password" class="input w-full" id="password" name="password" placeholder="Enter your password" required />
+              <div class="eye-open" onclick="eyeOpenClose()">
+                <svg class="w-6 h-10 absolute top-6 left-[336px] border-l-2 cursor-pointer" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"></path></svg>
+              </div>
+              <div class="eye-close" onclick="eyeOpenClose()">
+                <svg class="w-6 h-10 absolute top-6 left-[336px] border-l-2 cursor-pointer" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.875 18.825A10.05 10.05 0 0112 19c-4.478 0-8.268-2.943-9.543-7a9.97 9.97 0 011.563-3.029m5.858.908a3 3 0 114.243 4.243M9.878 9.878l4.242 4.242M9.88 9.88l-3.29-3.29m7.532 7.532l3.29 3.29M3 3l3.59 3.59m0 0A9.953 9.953 0 0112 5c4.478 0 8.268 2.943 9.543 7a10.025 10.025 0 01-4.132 5.411m0 0L21 21"></path></svg>
+              </div>
+            </span>
           </div>
           <div class="form-group mb-6">
             <input type="checkbox" class="text-left" value=""> Remember Me
@@ -51,6 +59,27 @@
       </div>
     </div>
   </div>
+
+  <!-- Start Scripts -->
+  <script>
+    function eyeOpenClose() {
+      var eyeOpen = document.querySelector(".eye-open");
+      var eyeClose = document.querySelector(".eye-close");
+      var input = document.querySelector("#password");
+      if (input.type === "password") {
+        input.type = "text";
+        eyeOpen.style.display = "none";
+        eyeClose.style.display = "block";
+      } else {
+        input.type = "password";
+        eyeOpen.style.display = "block";
+        eyeClose.style.display = "none";
+      }
+    }
+    
+  </script>
+  <!-- End Scripts -->
+  
   
 </body>
 
