--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dashboard | Easy Admin</title>
+  <title>Dashboard | Easy Dashboard</title>
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="./css/font-awesome/css/all.min.css" />
@@ -24,7 +24,7 @@
     <aside class="flex flex-col h-full w-1/4 bg-[#313a46] p-3">
       <div class="pb-7 flex justify-center ">
         <img src="../public/images/logo.png" alt="logo" class="w-10 h-10 bg-white rounded-full" />
-        <h1 class="font-bold text-white ml-2 mt-2 uppercase">Easy Admin</h1>
+        <h1 class="font-bold text-white ml-2 mt-2 uppercase">Easy Dashboard</h1>
       </div>
       <div class=" text-xs uppercase font-semibold text-gray-300 pl-8">
         <h3>Navigation</h3>
@@ -147,7 +147,7 @@
 
       <!-- Footer Section Start -->
       <footer class="flex h-20 bg-gray-100 text-gray-900">
-        <p class="m-auto">2022 &copy Easy Admin by Didarul Alam</p>
+        <p class="m-auto">2022 &copy Easy Dashboard by Didarul Alam</p>
       </footer>
       <!-- Footer Section End -->
     </div>
@@ -163,7 +163,7 @@
           <div class="flex items-center">
             <div class="flex items-center">
               <img src="../public/images/logo.png" alt="logo" class="w-16 h-16" />
-              <h1 class="text-2xl font-bold text-gray-800 ml-2">Easy Admin</h1>
+              <h1 class="text-2xl font-bold text-gray-800 ml-2">Easy Dashboard</h1>
             </div>
             <div class="search-box flex items-center">
               <input type="text" class="input bg-gray-200" placeholder="Search" />
