--- a/public/forgot-password.html
+++ b/public/forgot-password.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Forgot Password | Easy Admin</title>
+  <title>Forgot Password | Easy Dashboard</title>
 
   <!-- Font Awesome -->
   <!-- <link rel="stylesheet" href="./css/font-awesome/css/all.min.css" /> -->
@@ -22,7 +22,7 @@
   <div class="main h-screen flex">
     <div class="login-box m-auto max-w-md bg-white border border-gray-100 shadow-sm transition">
       <h2 class="p-9 text-center bg-indigo-400 text-white uppercase font-bold">
-        <a href="index.html">Easy Admin</a>
+        <a href="index.html">Easy Dashboard</a>
       </h2>
       <h3 class="text-center font-bold pt-10">Reset Password</h3>
       <p class="text-center px-8 pt-3 text-sm">Enter your email address and we'll send you an email with instructions to reset your password.</p>
