--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Home Page | Easy Admin</title>
+  <title>Home Page | Easy Dashboard</title>
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="./css/font-awesome/css/all.min.css" />
